--- a/client/src/pages/contactsUs/ContactsUs.css
+++ b/client/src/pages/contactsUs/ContactsUs.css
@@ -18,6 +18,7 @@ html, body {
   text-transform: uppercase;
   letter-spacing: 1.5px;
   animation: fadeIn 1s ease-in-out; /* אנימציית Fade-in */
+  margin-bottom: -20px;
 }
 
 /* עיצוב לדף ה-ContactsUs בלבד */
