--- a/client/src/components/admin/AdminPanel.css
+++ b/client/src/components/admin/AdminPanel.css
@@ -53,7 +53,7 @@ body, html {
   text-align: center;
   font-size: 2.5em;
   margin-bottom: 40px;
-  color: #2a9df4;
+  color: #090909;
   font-weight: 800;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -73,8 +73,8 @@ body, html {
 .category-container button {
   padding: 15px 30px;
   font-size: 1.2em;
-  color: white;
-  background: linear-gradient(to right, #36d1dc, #5b86e5);
+  color: rgb(0, 0, 0);
+  background: linear-gradient(to right, #fbffff, #969393);
   border: none;
   border-radius: 30px;
   cursor: pointer;
@@ -83,7 +83,7 @@ body, html {
 }
 
 .category-container button:hover {
-  background: linear-gradient(to right, #5b86e5, #36d1dc);
+  background: linear-gradient(to right, #fbffff, #969393);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   transform: scale(1.05);
 }
